[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
once_cell = "1.17.0"
aes-gcm = { version = "0.10.1", features = ["stream"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
getrandom = { version = "0.2.8", features = ["js"] }
